# kabaw-chat-client

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Include/UI/: ChatRoomWidget.h  ConnectDialog.h  MainWindow.h
Include/entities/: entities.h
Include/networking/: WebSocketManager.h
UI/Dialogs/: chatroomwidget.ui
UI/Windows/: ChatRoomWidget.cpp  ConnectDialog.cpp  MainWindow.cpp
src/UI/Dialogs/: chatroomwidget.ui  connectdialog.ui
src/UI/Windows/: ChatRoomWidget.cpp  ConnectDialog.cpp  MainWindow.cpp
src/networking/: WebSocketManager.cpp
